# encube

./: CMakeLists.txt  GPLv3-blurb.txt  MeanImage.xrw  README.md  deepdiff.py  default_init.py  encube_m.py  encube_om.cpp  float16.c  float16.h  hdglobals.h  hdsupport.cpp  hdsupport.h  json.cpp  moment_maps.frag  moment_maps.vert  png_util.c  png_util.h  raycasting.frag  raycasting.vert  request_handle.py  routines.cpp  routines.h  s2hd.c  shaderService.c  shaderService.h  tracks_400.frag  tracks_400.geom  tracks_400.vert  tubes.frag  tubes.geom  tubes.vert  utility.cpp  utility.h  webserver.py
config/: README.md  config-example.json
control/: Makefile  default.json  default_astro.json  encube.js  index.html  masklist.txt
control/lib/: JQuery-MIT-LICENSE.txt  OK-min.js  dat.gui.min.js  gl-matrix-min.js  jquery.tablesorter.js  sharevol-all.js  sharevol-min.js
control/src/: d3plots.js  index.html  main.js  minicave.js  slicer.js  tools.js  volume.js
control/style/: minicave.css  minicave_bg.xcf
scripts/: build-cave.csh  build-mac.csh  s2cavebuild.csh
